added some changes on fonts, fixed animation issue on canteen and uac during reserve

--- a/assets.qrc
+++ b/assets.qrc
@@ -20,5 +20,6 @@
         <file>assets/icons/PLM PARKING MANAGEMENT SYSTEM FINAL (1).png</file>
         <file>assets/icons/PLM_PARKING_MANAGEMENT_SYSTEM_FINAL__1_-removebg-preview.png</file>
         <file>assets/icons/png-transparent-computer-icons-iconfinder-report-icons-no-attribution-miscellaneous-angle-text.png</file>
+        <file>assets/icons/images (1).png</file>
     </qresource>
 </RCC>
