--- a/assets.qrc
+++ b/assets.qrc
@@ -21,5 +21,8 @@
         <file>assets/icons/PLM_PARKING_MANAGEMENT_SYSTEM_FINAL__1_-removebg-preview.png</file>
         <file>assets/icons/png-transparent-computer-icons-iconfinder-report-icons-no-attribution-miscellaneous-angle-text.png</file>
         <file>assets/icons/images (1).png</file>
+        <file>assets/icons/list.png</file>
+        <file>assets/icons/list (1).png</file>
+        <file>assets/icons/images__1_-removebg-preview.png</file>
     </qresource>
 </RCC>
